# system-software

./: .gitignore  SP_IK_serial.py  SP_serial.py  StewartPlatform.py  flake.nix  serial_print.py  trajectory_generation.py  treefmt.toml
nix/: devshell.nix  formatter.nix
src/launch/: tunnel_system.launch.py
src/tunnel_control/: package.xml  setup.py
src/tunnel_control/tunnel_control/: system_manager_node.py
src/tunnel_controller/: package.xml  setup.py
src/tunnel_controller/tunnel_controller/: controller_node.py
src/tunnel_ik/: package.xml  setup.py
src/tunnel_ik/tunnel_ik/: ik_node.py
src/tunnel_msgs/: CMakeLists.txt  package.xml
src/tunnel_msgs/msg/: IKSolution.msg  PlatformState.msg  TargetPose.msg
src/tunnel_targeting/: package.xml  setup.py
src/tunnel_targeting/tunnel_targeting/: targeting_node.py
