<?xml version="1.0"?>
<package format="3">
  <name>tunnel_ik</name>
  <version>0.1.0</version>
  <description>tunnel_ik node for the X-HAB Robotic Tunnel system.</description>
  <maintainer>ENAE484 X-HAB Robotic Tunnel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tunnel_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
